# ferritedb

./: .dockerignore  .gitignore  .rustfmt.toml  AGENTS.md  ATTRIBUTIONS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  Cargo.toml  DEPLOYMENT.md  Dockerfile  ERD.md  FINAL_ENHANCEMENT_REPORT.md  GITHUB_SECRETS.md  LICENSE  OPERATIONS.md  PRD.md  README.md  ROADMAP.md  SECURITY.md  SECURITY_STABILITY_EVALUATION.md  TASKS.md  clippy.toml  docker-compose.dev.yml  docker-compose.yml  ferritedb.dev.toml  justfile  nginx.conf  prometheus.yml  rustbase.dev.toml  test.txt
.codex/: AGENTS.md  SECURITY_AGENTS.md
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml
.github/workflows/: ci.yml  contributors.yml  release.yml
.sqlx/: query-02c3f3c24e20967c77c989e956a763b881f030801f307faa2486799e85248016.json  query-1051150743baa505bdfa2dcc6851c11c625d9a73645360d88463953864a99692.json  query-124934b98002bcc86e039e0916d814517316ae229617635b88f1aa10b036fb20.json  query-198c59386cc428a7d69c40a48fa32554da678e696eeb595d8547eb82b85e0071.json  query-251af3f10d2e6cd86b1f6f85b8b823230af342c0e0828fafdfe1eb6c3874be7c.json  query-317d4d730c08e771859bd05631e682d09491fe921d1d69a1fdbfdfe3546e8e9e.json  query-36f883195f4b976408ae3348316509b76b598ead0f0affe2c0217022d4cc148b.json  query-502f13b669cea74ad2e74338c8e0ade444dd41e139e4e944404b3900f4d11f45.json  query-58c155559688ac8f10689f403c07def2f055a9b58d39cdcad1c206acf4407c09.json  query-5d77e02ac00f2fb1e559fb9d582dfabc73c8b22417665368e421a9627081cf8d.json  query-6b5c3e8d6ec82f1a193dc92fb25a41cfa98293be1d4e37542b4c7b16c52709d3.json  query-72540ab5cb93683ed6430938b8e61a23487bf2900976df8e4ba913d978f20d83.json  query-8a27d294968b1a6a2ce612a0b48bf534b400d6b1ff37a9f5eac0621de20898a2.json  query-a07d10d84c677ab6402545b087afc13eb85badc0cf78496fe47b50e2e023579f.json  query-c97f12c7ba7b907487303aa12e14ed5c312e2b7d552c58ed1c301ebd7db4faf5.json  query-d0a68787429e7a99c430bd43a36790c456b44309b86c41c8c046578f034d5a72.json  query-dfd9ece348cfbcef828024616731cbcea0fb4ea18ea32251e867446cf17bbdef.json  query-f418f7240966fd65e6aa8240c1a9b1d207ea4821142c6400d6178cdac5700c95.json  query-fbd481b190e5fd267f8ebc6681de5ae865fbcbb9bd6901cc0ad9a34b1d94d568.json  query-fcb5eefa991047542084586e909e35cda94ad9ac545a94d59a849181d8a1d9b3.json
crates/core/: Cargo.toml
crates/core/src/: audit.rs  auth.rs  collections.rs  config.rs  database.rs  error.rs  lib.rs  models.rs  pii.rs  records.rs  repository.rs  repository_old.rs  schema_manager.rs  seed.rs
crates/core/tests/: example_collections_tests.rs  security_core_tests.rs
crates/rules/: Cargo.toml
crates/rules/src/: engine.rs  error.rs  evaluator.rs  grammar.pest  lib.rs  parser.rs
crates/sdk-rs/: Cargo.toml
crates/sdk-rs/src/: client.rs  error.rs  lib.rs  realtime.rs  types.rs
crates/server/: Cargo.toml
crates/server/admin/: app.js  index.html  styles.css
crates/server/src/: audit_middleware.rs  config.rs  csrf.rs  error.rs  files.rs  files_test.rs  lib.rs  middleware.rs  openapi.rs  realtime.rs  routes.rs  security.rs  server.rs  validation.rs
crates/server/tests/: admin_interface_tests.rs  integration_tests.rs  openapi_tests.rs  security_tests.rs
crates/storage/: Cargo.toml
crates/storage/src/: backend.rs  config.rs  error.rs  lib.rs  local.rs  s3.rs  tests.rs  transforms.rs
docs/: API.md  DEVELOPER_GUIDE.md  FAQ.md  SDK_GUIDE.md  TROUBLESHOOTING.md
migrations/: 001_initial_schema.sql  002_add_request_id_to_audit_log.sql
packaging/homebrew/: README.md  ferritedb.rb
release/ferritedb-v0.1.0/: CHANGELOG.md  README.md  ferritedb.dev.toml
release/ferritedb-v0.1.0/docs/: DEVELOPER_GUIDE.md  FAQ.md  TROUBLESHOOTING.md
release/ferritedb-v0.1.0/migrations/: 001_initial_schema.sql
scripts/: test-deployment.sh
src/: main.rs
tests/: ci_cd_tests.rs  cli_tests.rs  deployment_test_runner.rs  docker_integration_tests.rs  seed_integration_tests.rs
