[package]
name = "ferritedb-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "FerriteDB web server and HTTP API layer"

[dependencies]
# Workspace dependencies
ferritedb-core = { path = "../core" }
ferritedb-storage = { path = "../storage" }
ferritedb-rules = { path = "../rules" }

# Web framework
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
# axum-governor.workspace = true  # Temporarily disabled
tokio.workspace = true

# Serialization and validation
serde.workspace = true
serde_json.workspace = true

# Authentication
jsonwebtoken.workspace = true

# Utilities
uuid.workspace = true
chrono.workspace = true
tracing.workspace = true
thiserror.workspace = true
anyhow.workspace = true
futures-util.workspace = true
regex = "1.10"
base64 = "0.21"
rand_core.workspace = true

[dev-dependencies]
tokio-test = "0.4"
tempfile.workspace = true
tower = { workspace = true, features = ["util"] }
sqlx = { workspace = true, features = ["runtime-tokio-rustls", "sqlite"] }

[features]
default = []
oauth2 = ["ferritedb-core/oauth2"]
s3-storage = ["ferritedb-storage/s3"]
image-transforms = ["ferritedb-storage/image-transforms"]
metrics = []
server = ["ferritedb-core/server"]